Java compile